Additional Clarifications